<resources>
    <string name="app_name">RedLive</string>
    <string name="first_place">首页</string>
    <string name="second_place">圈子</string>
    <string name="third_place">我的</string>
    <string name="studytime">学习时间</string>
    <string name="addItems">圈子足迹</string>
    <string name="continuestudy">持续学习</string>
    <string name="enterTitle">登录RedLive</string>
    <string name="gotoregister">去注册 ></string>
    <string name="entercountnamehint">用户名</string>
    <string name="enterpasswordshint">密码</string>
    <string name="enter">登录</string>
    <string name="welcome">欢迎来到RedLive</string>
    <string name="register">注册</string>
    <string name="havecount">已有账号直接登录</string>
    <string name="outenter">退出登录</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="motto">签名</string>
    <string name="work">兴趣</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="hello">你也好呀</string>
    <string name="onehello">你好</string>
    <string name="time">时间</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="rcbtn_normal">按住 录音</string>
    <string name="rcbtn_recoding">松开 结束</string>
    <string name="rcbtn_cancel">手指上滑，取消录音</string>
    <string name="setLiveTitle">欢迎创建你的Live</string>
    <string name="livename">Live名称</string>
    <string name="setLive_topeople">Live面向人群</string>
    <string name="createLive">创建Live</string>
    <string name="city">城市</string>
    <string name="Enter_live">加入Live</string>
    <string name="everydaysentence">每日一句</string>
    <string name="myemail">tecmry6@gmail.com</string>
    <string name="yourself">主讲人介绍</string>
    <string name="talkpeople">主讲人:</string>
    <string name="talkyourself">主讲人介绍</string>
    <string name="talkLiove">Live介绍</string>
</resources>
