<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/Tv_Tiitle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center|left"
        android:hint="Title"
        android:layout_marginLeft="15pt"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/Bt_addLive"
        android:text="@string/Enter_live"
        android:background="@color/toolbarcolor"

        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:orientation="horizontal"
       android:layout_marginTop="15dp"
       >
    <TextView
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/talkpeople"
        android:gravity="center"
        android:layout_gravity="center"
        />
       <TextView
           android:id="@+id/authorname"
           android:layout_width="150dp"
           android:layout_height="match_parent"
           android:gravity="center|left"
           android:hint="nihaop" />
   </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/talkyourself"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/Tv_talk"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/talkLiove"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/Tv_livetalk"
        />
</LinearLayout>
</ScrollView>