<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LL"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/toolbarcolor"
        >

        <ImageButton
            android:id="@+id/renter_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/no"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/renter_cancel" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <EditText
            android:id="@+id/register_countname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/entercountnamehint"
            android:maxLength="20" />


        <EditText
            android:id="@+id/register_passwords"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/enterpasswordshint"
            android:inputType="textPassword"
            android:maxLength="20" />

        <TextView
            android:id="@+id/havecount"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/havecount" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_Tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/entertextview"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white">

    </TextView>
</LinearLayout>