<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutbacground"
    >
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbarcolor"
    android:navigationIcon="@drawable/no"
    app:navigationIcon="@drawable/no"
    android:id="@+id/usereditor_toolbar"
    >
</android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/email"
            android:gravity="center"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/Et_email"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/sex"
            android:gravity="center"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/man"
            android:gravity="center"
            />
        <CheckBox
            android:id="@+id/Cb_man"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />
        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/woman"
            android:gravity="center"
            />
        <CheckBox
            android:id="@+id/Cb_woman"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/work"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/Et_work"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/motto"
            android:gravity="center"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/Et_motto"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            android:maxLines="2"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/city"
            android:gravity="center"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/Et_City"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            android:maxLines="2"

            />
    </LinearLayout>
</LinearLayout>