<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_time"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:gravity="center"
                android:layout_gravity="center"
                android:maxWidth="100dp"
                android:id="@+id/tv_time"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_layout"
            android:layout_gravity="left"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_height="35dp"
                android:layout_width="35dp"
                android:id="@+id/IV_Left"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_Msg"
                android:background="@color/avoscloud_blue"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:hint="@string/onehello"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/right_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_Msg"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:background="@color/avoscloud_blue"
                android:hint="@string/hello"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/IV_Right"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>