<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
<Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbarcolor"
    >
    <TextView
        android:layout_width="300dp"
        android:layout_height="match_parent"
       android:layout_marginLeft="50dp"
       android:id="@+id/setLive_Title"
        android:text="@string/setLiveTitle"
        android:gravity="center"
        android:textSize="23sp"
        android:textColor="@color/white"
        />
</Toolbar>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="20dp"
      >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/livename"
          android:id="@+id/setLive_livename"
          android:gravity="center"
          android:layout_gravity="center"
          android:textSize="15sp"
          />
      <EditText
          android:layout_width="270dp"
          android:layout_height="wrap_content"
         android:layout_gravity="center"
          android:layout_marginTop="15dp"
          android:id="@+id/setLive_Etlivename"
          />
  </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Live的简介"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setLive_livetalk"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:text="@string/setLive_topeople"
                android:layout_gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Et_setterpeople"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>